RESOLVED FIXED320614
WGSL Token copy-assignment leaks the Identifier String's StringImpl on every token advance
https://bugs.webkit.org/show_bug.cgi?id=320614
Summary WGSL Token copy-assignment leaks the Identifier String's StringImpl on every ...
Chris Dumez
Reported 2026-07-29 19:52:52 PDT
WGSL Token copy-assignment leaks the Identifier String's StringImpl on every token advance
Attachments
Chris Dumez
Comment 1 2026-07-29 19:54:26 PDT
EWS
Comment 2 2026-07-30 15:25:14 PDT
Committed 318274@main (e02581f3b0d9): <https://commits.webkit.org/318274@main> Reviewed commits have been landed. Closing PR #70495 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-07-30 15:26:13 PDT
Note You need to log in before you can comment on or make changes to this bug.